fixing body horizontal scroll

--- a/public/assets/css/my-style.css
+++ b/public/assets/css/my-style.css
@@ -8,7 +8,7 @@ body{
     background-color: #fff;
     margin-top: 70px;
     margin-bottom: 150px;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 section{
     margin-top: 30px;
